tests/error/private_func_out.gw
#! [contains] can only be used at class scope
fun private void test(){}
